[workspace]
resolver = "2"
members = [
    "apps/bits",
    "apps/list-prefixes", 
    "apps/view-transactions",
    "libs/crypto",
    "libs/equity",
    "libs/network",
    "libs/p2p",
    "libs/utility",
    "libs/validation",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["John Bolton <jambolo@users.noreply.github.com>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
